tests/expectations/execution/external_storage.out
Error while running execution tests:
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'async'
    --> compiler-test:14:5
     |
  14 |     async transition c() -> Future {
     |     ^^^^^


Errors:
